@@ -3,7 +3,6 @@ package cn.aulang.job.executor;
 import cn.aulang.job.core.handler.IJobHandler;
 import cn.aulang.job.core.model.TriggerParam;
 import cn.aulang.job.thread.JobThread;
-import cn.aulang.job.thread.ThreadFactoryBuilder;
 import org.springframework.beans.factory.DisposableBean;
 
 import java.util.concurrent.ExecutorService;
@@ -17,8 +16,8 @@ import java.util.concurrent.Future;
  */
 public class JobHandlerExecutor implements DisposableBean {
 
-    protected final ExecutorService executorService = Executors.newCachedThreadPool(
-            new ThreadFactoryBuilder().setNameFormat("JobHandlerExecutor-%d").build());
+    protected final ExecutorService executorService = Executors.newThreadPerTaskExecutor(
+            Thread.ofVirtual().name("JobHandlerExecutor-").factory());
 
     public Future<?> submit(IJobHandler jobHandler, TriggerParam param, CallbackExecutor callback) {
         return executorService.submit(new JobThread(jobHandler, param, callback));
